--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   background-color: #ffffff;
-  background-image: url(./bg_icons.png);
+  background-image: url('https://user-images.githubusercontent.com/79800224/146986863-abb8fb04-6428-465a-a08d-8325230013db.png');
   
   font-family: "Muli", sans-serif;
   display: flex;
